# gmx2qmmm_portable

./: .gitignore  .python-app.yml  README.md  developer_notes.md  env.yaml  env.yml  gmx2qmmm.py  pyproject.toml  readInput.py  setup.cfg  setup.py  test.2.pointcharges  userInputs.py
.github/workflows/: python-app.yml
beispielinputcp24/: active.ndx  index.ndx  inner.ndx  outer.ndx  topol.top
correction_database/: database.csv  database.sqlite
correction_database/.ipynb_checkpoints/: testSQL-checkpoint.ipynb
env_gmx2qmmm/: pyvenv.cfg
example/scan/: scan.txt  topol.top
examples/notebooks/: explore_pcf.ipynb
examples/opt/: conf.g96  params.txt
examples/sp/: gro_info.txt  logfile.txt  logfile.txt_2024-11-21_18-43-55  logfile.txt_2024-11-21_18-45-38  logfile.txt_2024-11-21_18-48-59  logfile.txt_2024-11-21_18-50-47  logfile.txt_2024-11-21_18-56-43  logfile.txt_2024-11-21_18-57-29  params.txt  test.gjf  test.qmmm.top  test.qmmm.top.ndx  top_info.txt
gmx2qmmm/: _helper.py  gmx2qmmm.py
gmx2qmmm/input/: readInput.py
gmx2qmmm/operations/: atoms_from_xyz.py  bmat.py  expansion_check.py  generate_top.py  geo_from_hes.py  geo_from_xyz.py  geo_xyz_g09RevA.02.log.py  hes_xyz_g09RevD.01.fchk.py  hes_xyz_g09RevD_01_fchk.py  hessian_from_hes.py  mass_from_hes.py  nma_3N-6dof.py  nma_helper.py  nma_stuff.py  qmmm.py  qmmm_helper.py  qmmm_job.py  scan.py  xyz_zmat_g16RevA.02.py  xyz_zmat_g16RevA_02.py
gmx2qmmm/pointcharges/: generate_charge_shift.py  generate_pcf_from_top.py  prepare_pcf_for_shift.py  sum_pcf_tm.py
gmx2qmmm/tools/: create_droplet.py  scan.py
inputUltilities/: readInput.py
operations/: atoms_from_xyz.py  expansion_check.py  generate_top.py  geo_from_xyz.py  geo_xyz_g09RevA.02.log.py  hes_xyz_g09RevD.01.fchk.py  hessian_from_hes.py  nma_3N-6dof.py  qmmm.py  scan.py
operations/.ipynb_checkpoints/: qmmm-checkpoint.py
pointcharges/: generate_charge_shift.py  generate_pcf_from_top-checkpoint.py  generate_pcf_from_top.py  prepare_pcf_for_shift.py  sum_pcf_tm.py
pointcharges/.ipynb_checkpoints/: generate_pcf_from_top-checkpoint.py
src/gmx2qmmm/: app.py  cli.py  input_handler.py  logging.py  logging_utils.py  types.py  types_test.py
src/json_files/: mass_map.json
test/: test_gmx2qmmm.py  unit_tests.py
test/optimization_test/: optimization_production_test.py  (+1 more)
tools/: create_droplet.py
(+73 files in other folders)
