[metadata]
name = gmx2qmmm
version = 0.0.1
author = jangoetze
author_email = gmx2qmmm@gmail.com
description = A python interface for Quantum mechanics/Molecular mechanics (QM/MM) calculation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gmx2qmmm/gmx2qmmm_portable
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
