[metadata]
name = gmx2qmmm
version = attr: gmx2qmmm.__version__
author = Jan P. Goetze
author_email = gmx2qmmm@gmail.com
description = A python interface for Quantum mechanics/Molecular mechanics (QM/MM) calculation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gmx2qmmm/gmx2qmmm_portable
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    loguru
    numpy

[options.extras_require]
test =
    pytest
    pytest-mock
    pytest-cov
    coverage

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gmx2qmmm = gmx2qmmm.cli:main

[options.package_data]
gmx2qmmm =
    json_files/*.json
    correction_database/database.csv
    correction_database/database.sqlite
